# simd-lite

./: .drone.yml  .gitignore  Cargo.toml  README.md  build.rs  neon.spec
.circleci/: config.yml
simd-test-macro/src/: lib.rs
src/: aarch64.rs  arm.rs  cmparm.rs  lib.rs  simd.rs  simd_llvm.rs
src/aarch64/: generated.rs
src/aarch64/neon/: test_support.rs  tests.rs
src/arm/: generated.rs
src/arm/neon/: table_lookup_tests.rs  test_support.rs  tests.rs
