[package]
name = "simd-lite"
version = "0.1.0"
authors = ["Sunny Gleason", "Heinz N. Gies <heinz@licenser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
proc-macro2 = { version = "0.4", features = ["nightly"] }
quote = "0.6"
syn = { version = "0.15", features = ["full"] }