[package]
name = "simd-lite"
version = "0.1.0"
authors = ["Sunny Gleason", "Heinz N. Gies <heinz@licenser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
simd-test-macro = {path = "simd-test-macro"}
assert-instr-macro = {path = "assert-instr-macro"}